--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Confirm.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Confirm.cshtml
@@ -3,7 +3,7 @@
 @model SFA.DAS.ProviderRelationships.Web.ViewModels.AccountProviderLegalEntities.AccountProviderLegalEntityViewModel
 
 @{
-    ViewBag.Title = Model.AccountLegalEntity.Name;
+    ViewBag.Title = $"Confirm permissions for {Model.AccountLegalEntity.Name}";
     ViewBag.ZenDeskLabel = "permissions-confirm-permissions";
 }
 
@@ -100,7 +100,7 @@
             @Html.HiddenFor(m => m.Permissions[1].State)
             @Html.HiddenFor(m => m.IsProviderBlockedFromRecruit)
 
-            <button class="govuk-button" type="submit">Save changes</button>
+            <button class="govuk-button" type="submit">Confirm</button>
         }
     </div>
 </div>
