--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Confirm.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Confirm.cshtml
@@ -3,7 +3,7 @@
 @model SFA.DAS.ProviderRelationships.Web.ViewModels.AccountProviderLegalEntities.AccountProviderLegalEntityViewModel
 
 @{
-    ViewBag.Title = $"Confirm permissions for {Model.AccountLegalEntity.Name}";
+    ViewBag.Title = $"Confirm permissions for {Model.AccountProvider.ProviderName}";
     ViewBag.ZenDeskLabel = "permissions-confirm-permissions";
 }
 
