--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Permissions.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Permissions.cshtml
@@ -2,7 +2,7 @@
 @model SFA.DAS.ProviderRelationships.Web.ViewModels.AccountProviderLegalEntities.AccountProviderLegalEntityViewModel
 
 @{
-    ViewBag.Title = Model.AccountLegalEntity.Name;
+    ViewBag.Title = "Set permissions for your training provider";
     ViewBag.ZenDeskLabel = "permissions-set-permissions";
 }
 
@@ -114,7 +114,7 @@
             @Html.HiddenFor(m => m.Permissions[1].Value)
             @Html.HiddenFor(m => m.IsProviderBlockedFromRecruit)
 
-            <button class="govuk-button" type="submit">Save changes</button>
+            <button class="govuk-button" type="submit">Continue</button>
         }
     </div>
 </div>
