--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_HowPermissionsWork.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_HowPermissionsWork.cshtml
@@ -7,8 +7,8 @@
     <div class="govuk-details__text">
         <p class="govuk-body">You can:</p>
         <ul class="govuk-list govuk-list--bullet">
-            <li>update permissions for a provider at any time</li>
-            <li>review and make changes to anything a provider has done on your behalf</li>
+            <li>change permissions for a provider at any time</li>
+            <li>review and edit anything a provider does on your behalf</li>
         </ul>
         <p class="govuk-body">Your provider will not be able to access your account.</p>
     </div>
