--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Add.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Add.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewBag.Title = "Confirm training provider";
     ViewBag.ZenDeskLabel = "permissions-confirm-training-provider";
+    ViewBag.GaData.Vpv = "/permissions/accountproviders/add";
+    ViewBag.GaData.Ukprn = Model.Provider.Ukprn.ToString();
 }
 
 @section breadcrumb
