--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Added.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Added.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewBag.Title = "You've successfully added your training provider";
     ViewBag.ZenDeskLabel = "permissions-training-provider-added";
+    ViewBag.GaData.Vpv = "/permissions/accountproviders/added";
+    ViewBag.GaData.Ukprn = Model.AccountProvider.Id.ToString();
 }
 
 <div class="govuk-grid-row">
