--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/AlreadyAdded.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/AlreadyAdded.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewBag.Title = "You’ve already added this training provider";
+    ViewBag.GaData.Vpv = "/permissions/accountproviders/alreadyadded";
+    ViewBag.GaData.Ukprn = Model.AccountProvider.Id.ToString();
 }
 
 @section breadcrumb
