--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Find.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Find.cshtml
@@ -5,6 +5,7 @@
     var pageTitleJs = "Enter your training provider’s name or reference number (UKPRN)";
     ViewBag.Title = pageTitleNonJs;
     ViewBag.ZenDeskLabel = "permissions-search-for-a-training-provider";
+    ViewBag.GaData.Vpv = "/permissions/accountproviders/find";
 }
 
 @section breadcrumb
