--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Index.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Index.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewBag.Title = "Your training providers";
     ViewBag.ZenDeskLabel = "permissions-your-training-providers";
+    ViewBag.GaData.Vpv = "/permissions/accountproviders/index";
 }
 
 @section breadcrumb
