--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
@@ -37,6 +37,7 @@
     </div>
 
     @Html.Partial("_Footer", Html.GetFooterViewModel())
+    @Html.Partial("_GoogleAnalyticsInfo")
 
     <script src="@Html.CdnLink("libs/accessible-autocomplete","accessible-autocomplete.min.js")"></script>
 
