Fixed provider id value

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Added.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Added.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "You've successfully added your training provider";
     ViewBag.ZenDeskLabel = "permissions-training-provider-added";
     ViewBag.GaData.Vpv = "/permissions/accountproviders/added";
-    ViewBag.GaData.Ukprn = Model.AccountProvider.Id.ToString();
+    ViewBag.GaData.Ukprn = Model.AccountProvider.ProviderUkprn.ToString();
 }
 
 <div class="govuk-grid-row">
