--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Get.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Get.cshtml
@@ -6,7 +6,7 @@
     ViewBag.Title = Model.AccountProvider.ProviderName;
     ViewBag.ZenDeskLabel = "permissions-view-training-provider-permissions";
     ViewBag.GaData.Vpv = "/permissions/accountproviders/get";
-    ViewBag.GaData.Ukprn = Model.AccountProvider.Id.ToString();
+    ViewBag.GaData.Ukprn = Model.AccountProvider.ProviderUkprn.ToString();
 }
 
 @section breadcrumb
