--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/AlreadyAdded.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/AlreadyAdded.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "You’ve already added this training provider";
     ViewBag.GaData.Vpv = "/permissions/accountproviders/alreadyadded";
-    ViewBag.GaData.Ukprn = Model.AccountProvider.Id.ToString();
+    ViewBag.GaData.Ukprn = Model.AccountProvider.ProviderUkprn.ToString();
 }
 
 @section breadcrumb
