--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Index.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Index.cshtml
@@ -26,7 +26,7 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-xl">Your training providers</h1>
-        <p class="govuk-body">You can add a training provider, then set permissions to choose what they can do on your behalf.</p>
+        <p class="govuk-body">You can add a training provider, then give them permission to add apprentice records, recruit apprentices and create job adverts on your behalf.</p>
 
         @if (Model.AccountProviders.Count == 0)
         {
