--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Added.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Added.cshtml
@@ -10,11 +10,11 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <div class="govuk-panel govuk-panel--confirmation">
-            <div class="govuk-panel__title">
+            <h1 class="govuk-panel__title">
                 You've successfully added @Model.AccountProvider.ProviderName
-            </div>
+            </h1>
         </div>
-        <h3 class="govuk-heading-m govuk-!-margin-top-7">What happens next</h3>        
+        <h2 class="govuk-heading-m govuk-!-margin-top-7">What happens next</h2>        
         <div class="govuk-body">
             <p>You need to set permissions for @Model.AccountProvider.ProviderName so that they can act on your behalf.</p>
             <p>You can set permissions in the 'your training providers' section of your account.</p>
