Each radio group in a fieldset with a legend, and unique id on error message

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Permissions.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Permissions.cshtml
@@ -22,27 +22,23 @@
         {
             @Html.AntiForgeryToken()
 
+            <h1 class="govuk-heading-xl">
+                Set permissions for @Model.AccountProvider.ProviderName
+            </h1>
+
+            <div class="govuk-inset-text">
+                These permissions are on behalf of @Model.AccountLegalEntity.Name
+            </div>
+
             <fieldset class="govuk-fieldset">
-                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-                    <h1 class="govuk-heading-l">
-                        Set permissions for @Model.AccountProvider.ProviderName
-                    </h1>
-                </legend>
-
-                <p class="govuk-!-margin-bottom-6">
-                    These permissions are on behalf of @Model.AccountLegalEntity.Name
-                </p>
-
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
                     <h2 class="govuk-fieldset__heading">
                         Add apprentice records
                     </h2>
                 </legend>
-
                 <div class="govuk-hint govuk-!-margin-bottom-3">
                     This allows your training provider to add apprentice records. If you do not pay the levy, this permission also allows your training provider to reserve funding.
                 </div>
-
                 <div class="govuk-form-group @(Html.IsValid(m => m.Permissions[0].State) ? "" : "govuk-form-group--error")">
                     @if (!Html.IsValid(m => m.Permissions[0].State))
                     {
@@ -65,21 +61,21 @@
                         </div>
                     </div>
                 </div>
+            </fieldset>
 
+            <fieldset class="govuk-fieldset">
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
                     <h2 class="govuk-fieldset__heading">
                         Recruit apprentices
                     </h2>
                 </legend>
-
                 <div class="govuk-hint govuk-!-margin-bottom-3">
                     This allows your training provider to create and manage job adverts. It also allows them to receive and manage applications.
                 </div>
-
                 <div class="govuk-form-group @(Html.IsValid(m => m.Permissions[1].State) ? "" : "govuk-form-group--error")">
                     @if (!Html.IsValid(m => m.Permissions[1].State))
                     {
-                        <span id="confirmation-error" class="govuk-error-message">
+                        <span id="confirmation-error-recruit" class="govuk-error-message">
                             <span class="govuk-visually-hidden">Error:</span> @Html.ValidationMessageFor(m => m.Permissions[1].State)
                         </span>
                     }
@@ -95,7 +91,7 @@
                             <div class="govuk-radios__item">
                                 @Html.RadioButtonFor(m => m.Permissions[1].State, State.Conditional, new {id = "operation-1-conditional", @class = "govuk-radios__input"})
                                 <label class="govuk-label govuk-radios__label" for="operation-1-conditional">
-                                    Allow, but I want to review job adverts before they’re advertised
+                                    Allow, but I want to review job adverts before they're advertised
                                 </label>
                             </div>
                         }
@@ -108,7 +104,7 @@
                     </div>
                 </div>
             </fieldset>
-
+      
             @Html.HiddenFor(m => m.AccountLegalEntityId)
             @Html.HiddenFor(m => m.AccountProviderId)
             @Html.HiddenFor(m => m.AccountLegalEntity.Name)
