--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/AccountProvidersWithSingleOrganisation.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/AccountProvidersWithSingleOrganisation.cshtml
@@ -41,11 +41,11 @@
                     <a class="govuk-link govuk-link--no-visited-state" href="@Url.Action("Permissions", "AccountProviderLegalEntities", new AccountProviderLegalEntityRouteValues { AccountProviderId = accountProvider.Id, AccountLegalEntityId = accountProvider.AccountLegalEntities.First().Id })">
                         @if (!accountProvider.AccountLegalEntities.First().HadPermissions)
                         {
-                            @:Set permissions<span class="govuk-visually-hidden"> for @accountProvider.ProviderName</span>
+                            <span>Set permissions<span class="govuk-visually-hidden"> for @accountProvider.ProviderName</span></span>
                         }
                         else
                         {
-                            @:Change permissions<span class="govuk-visually-hidden"> for @accountProvider.ProviderName</span>
+                            <span>Change permissions<span class="govuk-visually-hidden"> for @accountProvider.ProviderName</span></span>
                         }
                     </a>
                 </td>
