--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/AccountProvidersWithMultipleOrganisation.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/AccountProvidersWithMultipleOrganisation.cshtml
@@ -30,7 +30,7 @@
                     else
                     {
                         <ul class="govuk-list govuk-!-margin-bottom-0">
-                        foreach (var permission in accountProviderLegalEntity.Operations.ToPermissions())
+                        @foreach (var permission in accountProviderLegalEntity.Operations.ToPermissions())
                         {
                             <li>@permission.ToString()</li>
                         }
