--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/AccountProvidersWithSingleOrganisation.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/AccountProvidersWithSingleOrganisation.cshtml
@@ -28,7 +28,7 @@
                 else
                 {
                     <ul class="govuk-list govuk-!-margin-bottom-0">
-                    foreach (var permission in accountProvider.AccountLegalEntities.First().Operations.ToPermissions())
+                    @foreach (var permission in accountProvider.AccountLegalEntities.First().Operations.ToPermissions())
                     {
                         <li>@permission.ToString()</li>
                     }
