MAC-25-Content change on Provider permissions page

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Permissions.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Permissions.cshtml
@@ -68,12 +68,12 @@
 
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
                     <h2 class="govuk-fieldset__heading">
-                        Recruit apprentices
+                        Recruit apprentices and trainees
                     </h2>
                 </legend>
 
                 <div class="govuk-hint govuk-!-margin-bottom-3">
-                    This allows your training provider to create and manage job adverts. It also allows them to receive and manage applications.
+                    This allows your training provider to create and manage adverts. It also allows them to receive and manage applications.
                 </div>
 
                 <div class="govuk-form-group @(Html.IsValid(m => m.Permissions[1].State) ? "" : "govuk-form-group--error")">
